--- a/MFC_Draw/MFC_Draw.vcxproj
+++ b/MFC_Draw/MFC_Draw.vcxproj
@@ -75,6 +75,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\BCGSoft\BCGControlBarPro\BCGCBPro;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\BCGSoft\BCGControlBarPro\Bin;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
